# GTK-Chess

./: .gitignore  LICENSE.txt  Makefile  README.md  TODO.md  flake.nix  meson.build
.github/workflows/: documentation.yaml  linting.yaml
config/: engine_manager.conf  settings.conf  stockfish.conf
data/: 960.txt  gtkchessapp.gresource.xml  meson.build  window.glade
docs/source/: conf.py  getting started.rst  index.rst  requirements.txt
include/: board.h  engine_controls.h  fen.h  game_info.h  globals.h  gtkchessapp.h  notation.h  pgn.h  rules.h  state.h  state_tree.h  typedecl.h
src/: Chess_Board.tiff  arraylist.c  arraylist.h  board.c  board.h  engine-interface.md  engine.c  engine.h  engine_controls.c  engine_manager.c  engine_manager.h  fen.c  game_info.c  globals.h  gtkchessapp.c  gtkchessapp.gresource.xml  gtkchessapp.h  gui.c  gui.h  interact.h  main.c  main.glade  meson.build  notation.c  pgn.c  rules.c  rules.h  selected.css  state.c  state.h  state_tree.c  state_tree.h  typedecl.h  window.glade  window.glade~
